# fansi

./: LICENSE  README.md  fansi.py  pyproject.toml
data/: data.py
fansi/: data.py  fansi.py
tests/: demo.py  test_fansi.py
