[tool.poetry]
name = "fansi"
version = "0.1.7"
description = "A Python library that makes formatting, colouring and adding emojis to terminal printouts easy."
readme = "README.md"
homepage = "https://github.com/drivasperez/fansi/"
authors = ["Daniel Rivas Perez <drivas12@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.0"
colorama = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
              
